fix bugs and add logout docs
