# app/Http/Requests/Auth/LoginRequest.php
@@ -22,8 +22,8 @@ class LoginRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'nom_utilisateur' => 'required|string|max:50|unique:users,nom_utilisateur',
-            'email'    => 'required|email|max:255|unique:users,email',
+            'nom_utilisateur' => 'required|string|max:50|exists:users,nom_utilisateur',
+            'email'    => 'required|email|max:255|exists:users,email',
             'mdp' => 'required|string|min:8',
         ];
     }
@@ -32,10 +32,17 @@ class LoginRequest extends FormRequest
     {
         return [
             'nom_utilisateur.required' => 'Le nom d’utilisateur est requis.',
+            'nom_utilisateur.string'   => 'Le nom d’utilisateur doit être une chaîne de caractères.',
+            'nom_utilisateur.max'      => 'Le nom d’utilisateur ne doit pas dépasser 50 caractères.',
+            'nom_utilisateur.exists'   => 'Ce nom d’utilisateur n\'existe pas dans notre base de données.',
             'email.required'    => 'L\'adresse email est requise.',
             'email.unique'      => 'Cette adresse email est déjà utilisée.',
-            'mdp.required' => 'Le mot de passe est requis.',
-            'mdp.min'      => 'Le mot de passe doit comporter au moins 8 caractères.',
+            'email.email'       => 'L\'adresse email doit être valide.',
+            'email.max'         => 'L\'adresse email ne doit pas dépasser 255 caractères.',
+            'email.exists'      => 'Cette adresse email n\'existe pas dans notre base de données.',
+            'mdp.string'        => 'Le mot de passe doit être une chaîne de caractères.',
+            'mdp.required'      => 'Le mot de passe est requis.',
+            'mdp.min'           => 'Le mot de passe doit comporter au moins 8 caractères.',
         ];
     }
 }
