# app/Models/Type_Document.php
@@ -1,14 +1,16 @@
 <?php
 namespace App\Models;
 
+use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Support\Str;
 
 class Type_Document extends Model
 {
+    use HasFactory;
     public $incrementing = false;
     protected $keyType    = 'string';
-    protected $fillable   = ['id', 'titre', 'frais', 'libelle','recompense', 'validite','date_expiration', 'supprime'];
+    protected $fillable   = ['id', 'titre', 'libelle', 'frais','recompense', 'validite','date_expiration', 'supprime'];
 
     protected static function booted()
     {
